--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gustavoam-asdf/whatsapp-web.js",
-  "version": "1.22.3",
+  "name": "@gustavoam-asdf/whatsapp-web",
+  "version": "1.0.0",
   "description": "Library for interacting with the WhatsApp Web API ",
   "main": "./index.js",
   "typings": "./index.d.ts",
@@ -8,11 +8,7 @@
     "test": "mocha tests --recursive --timeout 5000",
     "test-single": "mocha",
     "shell": "node --experimental-repl-await ./shell.js",
-    "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pedroslopez/whatsapp-web.js.git"
+    "generate-docs": "jsdoc --configure .jsdoc.json --verbose"
   },
   "keywords": [
     "whatsapp",
@@ -22,11 +18,8 @@
     "client",
     "node"
   ],
-  "author": "Pedro Lopez",
+  "author": "Gustavo A. <gustavo.atencio.mauricio@outlook.com>",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/pedroslopez/whatsapp-web.js/issues"
-  },
   "homepage": "https://wwebjs.dev/",
   "dependencies": {
     "@pedroslopez/moduleraid": "^5.0.2",
@@ -56,5 +49,16 @@
     "archiver": "^5.3.1",
     "fs-extra": "^10.1.0",
     "unzipper": "^0.10.11"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/gustavoam-asdf/whatsapp-web.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gustavoam-asdf/whatsapp-web.js/issues"
   }
 }
